# CFLF

./: .gitignore  README.md  main.py  options.py  pyproject.toml  requirements.txt  test.py
Visualization Interactive SubSystem/configuration/: configurator.py  main.py
Visualization Interactive System/configuration/: constants.py  main.py
algo/: aggregrate.py  validate.py
algo/FairAvg/: fairavg_api.py
algo/FedAvg/: client.py  fedavg_api.py
algo/FedFAIM/: client.py  fedfaim_api.py
algo/FedFAIM_改进/: fedfaim_api.py
algo/FedQD/: fedqd_api.py
algorithm/: aggregrate.py
algorithm/FedAvg/: client.py
algorithm/base/: client.py  server.py
algorithm/method/: auto_fusion.py  auto_fusion_layer.py  gradnorm_update.py  margin_loss.py
config/: args.py  params_dev.yaml  params_run.py  params_tep.json
data/: data_loader.py  dataset.py  download.py  get_data.py  others.py  partition.py
data/dataset/: __init__.py  cifar10.py  (+6 more)
experiment/: options.py  params.json
manager/: control.py  informer.py  manager.py  mapping.py  save.py  task.py
model/: Initialization.py  cifar_cnn_3conv_layer.py  initialize_model.py  mnist_cnn.py
results/: 20240330191858_fedavg.pkl  20240330192925_fedavg.pkl  20240330193824_fedavg.pkl  20240330224343_fedavg.pkl  20240330225253_fedavg.pkl  20240330225427_fedavg.pkl  README.md
util/: drawing.py  generator.py  gradient.py  logging.py  manager.py  running.py  task.py
utils/: drawing.py  generator.py  gradient.py  logging.py  manager.py  model_trainer.py  running.py  task.py
visual/: lazy_stepper.py  main.py  main2.py  models.py
(+483 files in other folders)
